add error handling, utilities, and store fetching logic to esb package
